--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
     - assets/images/metamask-logo.png
     - assets/images/walletconnect-logo.png
     - lib/contracts/staging/greeter.abi.json
+    - lib/contracts/staging/customer.abi.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
