--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   url_launcher: ^6.1.5
   walletconnect_dart: ^0.0.11
   web3dart: ^2.5.1
+  postgres: ^2.4.3
 
 dev_dependencies:
   bloc_test: ^9.1.0
